# grasp-point-selection-sim

./: .gitignore  README.md  config_list_3_methods.npy  config_list_single_method.npy  coonfig_list_single_method.npy  data_collection.py  dynamo_grasp.sh  isaac-gym-preview-4  local_eval_models.py  primitive_teleop.py  run_RL.py  setup.py  temp_test.py  test_data_numpy.py  train_models.py  train_models_parallel copy.py  train_models_parallel neg_dist.py  train_models_parallel sparse neg_dist.py  train_models_parallel sparse.py  train_models_parallel.py  train_models_parallel_SAC.py  train_models_parallel_aws.py  train_models_parallel_simplified.py  train_models_parallel_simplified_state.py  visualize_grasp_points.py
assets/urdf/Aurmar_description/robotiq_2f_85_gripper_visualization/: CMakeLists.txt  README.md  package.xml
assets/urdf/Aurmar_description/robotiq_2f_85_gripper_visualization/launch/: load_robotiq_2f_85.launch
assets/urdf/Aurmar_description/robotiq_2f_85_gripper_visualization/meshes/collision/: distal_phalanx.stl
assets/urdf/Aurmar_description/robotiq_2f_85_gripper_visualization/meshes/visual/: distal_phalanx.stl  outer_knuckle.stl
camera_properties/: projection_matrix.npy
configs/: big_collision_primitives_3d.yml  collision_primitives_3E.yml  collision_primitives_3F.yml  collision_primitives_3H.yml  collision_primitives_3d.yml
dqn/: DQN.py  main.py
homogeneous_trasnformation_and_conversion/: rotation_conversions.py
isaacgymenvs/: __init__.py
isaacgymenvs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kernel/: object_spawning_kernel.py  (+2 more)
(+951 files in other folders)
