<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_85_gripper_visualization</name>
  <version>1.1.0</version>
  <description>Robotiq ARG 2-Finger 85mm model C3 description package</description>
  <license>BSD</license>
  <author email="daniels.ordonez@gmail.com">Daniel Ordonez</author>
  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
</package>
